--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.gabrielebaldoni.gdgcataniagcmtest"
+    package="info.gdgcatania.android.app.gcmtest.gcm"
     android:versionCode="30"
     android:versionName="1.0" >
 
@@ -14,10 +14,10 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <permission
-        android:name="edu.gabrik.cryptochat.permission.C2D_MESSAGE"
+        android:name="info.gdgcatania.android.app.gcmtest.gcm.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
 
-    <uses-permission android:name="edu.gabrik.cryptochat.C2D_MESSAGE" />
+    <uses-permission android:name="info.gdgcatania.android.app.gcmtest.gcm.C2D_MESSAGE" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <application
