--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="info.gdgcatania.android.app.gcmtest.gcm"
+    package="info.gdgcatania.android.app.gcmtest"
     android:versionCode="30"
     android:versionName="1.0" >
 
